chg: usr: 所有的页面都使用vux的部件

--- a/src/components/Inbox/main.html
+++ b/src/components/Inbox/main.html
@@ -1,5 +1,7 @@
-<ul>
-    <li v-for="action in inbox" :key="action.id">
-        <router-link :to="'/action/' + action.id" >{{ action.title }}</router-link>
-    </li>
-</ul>
+<group>
+    <cell v-for="action in inbox" :key="action.id"
+          :title="action.title"
+          :link="'/action/' + action.id"
+    >
+    </cell>
+</group>
