--- a/src/views/WelcomeView/main.html
+++ b/src/views/WelcomeView/main.html
@@ -1,5 +1,4 @@
-<ul>
-    <li v-for="link in links">
-        <router-link :to="'/' + link">{{ link }}</router-link>
-    </li>
-</ul>
+<group>
+    <cell link="/inbox" title="Inbox"></cell>
+    <cell link="/projects" title="Projects"></cell>
+</group>
