--- a/src/App/main.sass
+++ b/src/App/main.sass
@@ -27,3 +27,8 @@ body
     text-decoration: none
     font-size: 1.3rem
     vertical-align: middle
+
+
+.clear-cell-linkarrow
+  .weui-cell_access .weui-cell__ft:after
+    display: none
