--- a/src/App/main.sass
+++ b/src/App/main.sass
@@ -32,3 +32,12 @@ body
 .clear-cell-linkarrow
   .weui-cell_access .weui-cell__ft:after
     display: none
+
+
+.icon
+  display: inline-block
+  width: 1em
+  height: 1em
+  stroke-width: 0
+  stroke: currentColor
+  fill: currentColor
