chg: dev: 使用后端接口来替代本地数据接口

--- a/src/App/main.html
+++ b/src/App/main.html
@@ -1,6 +1,6 @@
 <div id="app">
     <top-action-bar />
-    <main>
+    <main v-if="!$store.state.loading">
         <transition name="fade" mode="out-in">
             <router-view></router-view>
         </transition>
