--- a/src/components/ActionItem/Info/main.html
+++ b/src/components/ActionItem/Info/main.html
@@ -2,6 +2,6 @@
     <selector title="Status" v-model="action.status" :options="statuses"></selector>
     <selector title="Type" v-model="action.type" :options="actionTypes"></selector>
     <selector title="Project" v-model="action.project" :options="projectsOpt"></selector>
-    <datetime title="Due" v-model="action.dueDate" format="YYYY-MM-DD HH:mm" disable-past="true" placeholder="None" clear-text="Clear" @on-clear="action.dueDate = null"></datetime>
+    <datetime title="Due" v-model="action.dueDate" format="YYYY-MM-DD HH:mm" placeholder="None" clear-text="Clear" @on-clear="action.dueDate = null"></datetime>
     <x-input v-if="action.type !== 'Todo/Done'" keyboard="number" :show-clear="false" title="Target" v-model.lazy="target" type="number"></x-input>
 </group>
