new: dev: 记录Action的修改log

--- a/src/App/main.html
+++ b/src/App/main.html
@@ -8,4 +8,5 @@
     <div class="new-action">
         <router-link to="/action/new">+</router-link>
     </div>
+    <loading v-model="$store.state.loading" text="Loading"></loading>
 </div>
