new: usr: basic context

--- a/src/views/WelcomeView/main.html
+++ b/src/views/WelcomeView/main.html
@@ -1,4 +1,7 @@
 <group>
     <cell link="/inbox" title="Inbox"></cell>
     <cell link="/projects" title="Projects"></cell>
+    <cell link="/contexts" title="Contexts"></cell>
+    <cell link="/calendar" title="Calendar"></cell>
+    <cell link="/review" title="Review"></cell>
 </group>
