:sparkles: action list上可以看到action的状态
 #2

--- a/src/components/Inbox/main.html
+++ b/src/components/Inbox/main.html
@@ -1,7 +1,8 @@
 <group>
-    <cell v-for="action in inbox" :key="action._id"
-          :title="action.title"
-          :link="'/action/' + action._id"
-    >
-    </cell>
+  <cell v-for="action in inbox" :key="action._id"
+        :title="action.title"
+        :link="'/action/' + action._id"
+  >
+    <span slot :class="getStatusColorClass(action.status)">{{ action.status }}</span>
+  </cell>
 </group>
