:sparkles: action list支持swipeout操作
左滑可以删除action；右滑可以更改action的status #2

--- a/src/components/ActionItem/Info/main.html
+++ b/src/components/ActionItem/Info/main.html
@@ -1,5 +1,5 @@
 <group label-align="left" label-width="4em" label-margin-right="2em" class="clear-group-border-top">
-    <selector title="Status" v-model="action.status" @on-change="editedField('status', $event)" :options="statuses"></selector>
+    <selector title="Status" v-model="action.status" @on-change="editedField('status', $event)" :options="$store.state.actionStatuses"></selector>
     <selector title="Type" v-model="action.type" @on-change="editedField('type', $event)" :options="actionTypes"></selector>
     <selector title="Context" v-model="action.context" :options="contextsOpt" @on-change="editedContext"></selector>
     <selector title="Project" v-model="action.project" :options="projectsOpt" @on-change="editedProject"></selector>
