--- a/src/components/Inbox/main.html
+++ b/src/components/Inbox/main.html
@@ -1,8 +1,1 @@
-<group>
-  <cell v-for="action in inbox" :key="action._id"
-        :title="action.title"
-        :link="'/action/' + action._id"
-  >
-    <span slot :class="getStatusColorClass(action.status)">{{ action.status }}</span>
-  </cell>
-</group>
+<action-list :actions="inbox"></action-list>
