--- a/src/components/ProjectItem/main.html
+++ b/src/components/ProjectItem/main.html
@@ -13,7 +13,7 @@
             @on-focus="startEditField('description')"
             @on-blur="editedInputField()"
         ></x-textarea>
-        <selector title="Status" v-model="project.status" :options="projectStatuses" @on-change="editedField('status', $event)"></selector>
+        <selector title="Status" v-model="project.status" :options="$store.state.projectStatuses" @on-change="editedField('status', $event)"></selector>
         <datetime
             title="Due"
             v-model="project.dueDate"
