:bug: fix 前端加载action只会加载50个的bug

--- a/src/components/ActionList/main.sass
+++ b/src/components/ActionList/main.sass
@@ -16,12 +16,12 @@
   justify-content: space-between
 
 .list-enter-active, .list-leave-active
-  transition: all 0.3s
+  transition: all .3s
   .task-button-delete
-    transition: all 0.3s
+    transition: all .3s
 
 .list-enter, .list-leave-to
-  height: 0
+  height: 0 !important
   .task-button-status
     display: none
   .task-button-delete
