--- a/src/views/ReviewView/main.html
+++ b/src/views/ReviewView/main.html
@@ -1,10 +1,27 @@
 <group>
+    </cell>
     <cell
-        v-for="project in projects"
-        :key="project._id"
-        :link="'/project/' + project._id + '/list'"
-        :title="project.title"
-        @click.native="$store.commit('SET_REVIEW_MODE', true)"
+      link="/review/every-day"
+      title="Daily"
+      :value="$store.getters.needReviewProject('every day').length + ' reviews'"
+    >
+    </cell>
+    <cell
+      link="/review/every-week"
+      title="Weekly"
+      :value="$store.getters.needReviewProject('every week').length + ' reviews'"
+    >
+    </cell>
+    <cell
+      link="/review/every-month"
+      title="Monthly"
+      :value="$store.getters.needReviewProject('every month').length + ' reviews'"
+    >
+    </cell>
+    <cell
+      link="/review/every-year"
+      title="Yearly"
+      :value="$store.getters.needReviewProject('every year').length + ' reviews'"
     >
     </cell>
 </group>
